# pam_shield

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  INSTALL  README  pam_shield.c  pam_shield.h  pam_shield_lib.c  pam_shield_lib.h  shield.conf  shield_purge.c
.github/workflows/: qa.yaml  qa.yml
cmake/: FindGDBM.cmake  FindPAM.cmake
scripts/: shield-trigger  shield-trigger-iptables  shield-trigger-ufw
